FIX: ui issue on small screens resolved

--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,8 @@
 	min-height: 450px;
 }
 
-.afb-container-left {
-	max-height: 50%;
+.afb-container-left .card {
+	max-height: calc(50vh);;
     overflow: auto;
 }
 
@@ -22,6 +22,22 @@
 	padding: 10px;
 	text-align: center;
 	cursor: pointer;
+}
+
+@media screen and (max-width: 1900px) {
+	.afb-toolbar-item {
+		padding: 5px;
+	}
+
+	.afb-container-left{
+		padding-right: 24px !important;
+		padding-left: 0px !important;
+	}
+
+	.afb-container-right {
+		padding-right: 0px !important;
+		padding-left: 12px !important;
+	}
 }
 
 .afb-toolbar-item:hover {
